tests/suite/fail/generated/lexer/fail_unclosed_comment_8.ny
//~ ERROR unclosed block comment
fn main() {
    let x = 8 /* unclosed block 8
    print(x)
}
